# fast-rust-linter

./: Cargo.toml  LICENSE  README.md
benches/: blazelint.rs
src/: lib.rs  linter.rs  main.rs
src/src/: linter.rs  main.rs
