[package]
name = "blazelint"
version = "0.5.0"
edition = "2026"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
colored = "2.1"
jwalk = "0.8"
rayon = "1.10"
tempfile = "3.10"
memchr = "2.7"
bstr = "1.9"
indicatif = { version = "0.17", features = ["rayon"] }
memmap2 = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "blazelint"
harness = false
